--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         var parElement = document.getElementById("generatedLink");
         var textToAdd = document.createTextNode(
-          `http://${baseUrl}/watch.html?v=${videoCode}`
+          `${baseUrl}/watch.html?v=${videoCode}`
         );
         parElement.appendChild(textToAdd);
       }
