--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <script>
       var LinkToBeCopied = "";
       function generateLink() {
-        const baseUrl = "https://youngnishant.github.io/open-link-in-app";
+        const baseUrl = "https://youtube-app-opener.netlify.app";
         let url = document.getElementById("youtubeUrl").value;
         let videoCode = "";
         if (url.includes("youtu.be")) {
