--- a/watch.html
+++ b/watch.html
@@ -23,7 +23,7 @@
       </p>
     </div>
     <script>
-      const baseUrl = "https://youngnishant.github.io/open-link-in-app";
+      const baseUrl = "youtube-app-opener.netlify.app";
       var search = window.location.search.substring(1);
       let queryString = new URLSearchParams(search);
       if (queryString.has("v")) {
